# ChangeLog for x11-terms/pssh
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-terms/pssh/Attic/ChangeLog,v 1.4 2005/05/24 23:44:35 spyderous Exp $

*pssh-1.2.0 (24 May 2005)

  24 May 2005; Donnie Berkholz <spyderous@gentoo.org>; +pssh-1.2.0.ebuild:
  (#87320) Version bump.

*pssh-1.0.0 (04 Nov 2004)

  04 Nov 2004; Konstantin Arkhipov <voxus@gentoo.org> :
  1.0.0 unmasked on x86.

*pssh-1.1.1 (04 Nov 2004)

  04 Nov 2004; Konstantin Arkhipov <voxus@gentoo.org> +pssh-1.1.1.ebuild:
  Version bump.

  03 Sep 2004; David Holm <dholm@gentoo.org> pssh-1.0.0.ebuild:
  Added to ~ppc.

*pssh-1.0.0 (21 Jul 2004)

  21 Jul 2004; Konstantin Arkhipov <voxus@gentoo.org> +clusterssh-2.16.ebuild:
  Initial revision, closes #61161.