@@ -1,8 +1,4 @@
-MD5 aa7cf88748b053c6a68b7822a7712f83 ChangeLog 782
+MD5 a248af48807956bf82ae19cf801183f3 pssh-1.2.0.ebuild 897
+MD5 33ac61adea594b4b4845559875bfea92 ChangeLog 952
 MD5 3acde92a54dc341f86e1f0e00789915c metadata.xml 220
-MD5 5aeb875281d4e03f5ee7a3df8c54f76a pssh-1.0.0.ebuild 890
-MD5 3f003e0474760623f6da193cba056259 pssh-1.1.1.ebuild 891
-MD5 bc096be3d68c581ed476f71ab0cc39ad pssh-1.2.0.ebuild 895
-MD5 b00517bcb01f487a2af7fc68ecc7648b files/digest-pssh-1.0.0 61
-MD5 194e3c6da0f176a387ed6d7643393578 files/digest-pssh-1.1.1 61
 MD5 5de6907cccf96992364b289d66e04a59 files/digest-pssh-1.2.0 61
