@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-terms/pssh/Attic/pssh-1.2.0.ebuild,v 1.1 2005/05/24 23:44:35 spyderous Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-terms/pssh/Attic/pssh-1.2.0.ebuild,v 1.2 2005/07/17 12:17:24 voxus Exp $
 
 DESCRIPTION="This package provides parallel versions of the openssh tools."
 HOMEPAGE="http://www.theether.org/pssh/"
@@ -8,7 +8,7 @@ SRC_URI="http://www.theether.org/pssh/${P}.tar.gz"
 
 SLOT="0"
 LICENSE="GPL-2"
-KEYWORDS="~x86 ~ppc"
+KEYWORDS="x86 ~ppc ~amd64"
 IUSE=""
 
 DEPEND=">=dev-lang/python-2.2"
